# ScriptCommander

./: .flake8  .gitignore  README.md  pyproject.toml
scriptcommander/: settings.py
scriptcommander/database/: __init__.py  databaselayer.py  db_model.py  sqlite_db.py
scriptcommander/logging/: __init__.py  logger.py
scriptcommander/scripts/: __init__.py  script_template.py  scriptmanager.py
scriptcommander/tools/: __init__.py
scriptcommander/ui/: functions.py  logs.py  main.py  scripts.py  settings.py
