[project]
name            = "scriptcommander"
version         = "0.1.0"
description     = "A manager to run scripts with settings, and log its output"
readme          = "README.md"
license         = {file = "LICENSE.md"}
requires-python = ">=3.7"
keywords        = ["automation"]

authors = [
  {name = "Pieter-Jan Moreels", email = "pieter-jan@pidgey.net" }
]

maintainers = [
  {name = "Pieter-Jan Moreels", email = "pieter-jan@pidgey.net" }
]

#TODO: Add here
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [  # Optional
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "click"
]

[project.urls]
"Homepage"    = "https://github.com/PidgeyL/ScriptCommander"
"Bug Reports" = "https://github.com/PidgeyL/ScriptCommander/issues"
"Source"      = "https://github.com/PidgeyL/ScriptCommander"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
# [project.scripts]  # Optional
# sample = "sample:main"

[project.scripts]
scriptcommander = "scriptcommander.ui.main:manager"


[build-system]
requires      = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
